class TestExecutionController:
    def executeTest(self, testCaseId: int) -> str:
        #Implementation to execute test based on testCaseId
        pass

    def saveTestResult(self, testResult: str) -> None:
        #Implementation to save testResult
        pass

    def uploadTestResult(self, testResult: str) -> bool:
        #Implementation to upload testResult
        pass

    def saveReport(self, report: str) -> None:
        #Implementation to save report
        pass