```python
class TestEnvironment:
    def __init__(self, environmentId, status):
        self.environmentId = environmentId
        self.status = status