```python
class TestSystem:
    def __init__(self, systemId, name):
        self.systemId = systemId
        self.name = name